# All_Stocks

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  local_scheduler.sh  pyproject.toml  render.yaml  requirements.txt  test_parse.py
.github/workflows/: eval.yml  ingest.yml
config/: disclaimer.txt  refusal_intents.yaml  sources.yaml  thresholds.yaml
data/phase_1_2_extracted/: hdfc_elss.json  hdfc_equity.json  hdfc_focused.json  hdfc_large_cap.json  hdfc_mid_cap.json
data/phase_1_3_cleaned/: hdfc_elss.json  hdfc_equity.json  hdfc_focused.json  hdfc_large_cap.json  hdfc_mid_cap.json
data/phase_1_4_chunked/: hdfc_elss.json  hdfc_equity.json  hdfc_focused.json  hdfc_large_cap.json  hdfc_mid_cap.json
docs/: architecture.md  edge_cases.md  problemstatement-2.md
frontend/: index.html  main.js  style.css  vercel.json
src/mf_faq/: __init__.py
src/mf_faq/config/: __init__.py  loader.py
src/mf_faq/ingestion/: __init__.py  build_index_from_cache.py  chunker.py  cleaner.py  embedder.py  extractor.py  fetcher.py  indexer.py  refresh.py
src/mf_faq/orchestrator/: __init__.py  intent_classifier.py  llm_client.py  orchestrator.py  pii_detector.py  post_checker.py
src/mf_faq/retrieval/: __init__.py  reranker.py  (+5 more)
tests/: ci_gate.py
tests/eval/: factual_qa.yaml  out_of_corpus.yaml  pii_probes.yaml  refusal_suite.yaml
tests/unit/: test_app.py  test_chunker.py  test_cleaner.py  test_config_loader.py  test_embedder.py  test_extractor.py  test_fetcher.py  test_hybrid_retriever.py  test_indexer.py  test_orchestrator.py  test_refresh.py
(+22 files in other folders)
